test/parser/top_level.yl
// RUN: compiler %s -ast-dump 2>&1 | filecheck %s

// CHECK: [[# @LINE + 1 ]]:1: error: only function declarations are allowed on the top level
while 0.0 {}
